--- a/css/styles.less
+++ b/css/styles.less
@@ -534,7 +534,11 @@ transform:translate(-50%, -50%);
 	}
 }
 #insert__promocode{
-	display: none;	
+	opacity: 0;
+	font-size: 18px;
+    margin-top: 10px;
+    text-align: left;
+    text-transform: uppercase;	
 }
 .total{
 	.uppercase;
