--- a/css/styles.less
+++ b/css/styles.less
@@ -15,6 +15,40 @@
 @m3:80px;
 @m4:160px;
 @m250:250px;
+
+
+
+#follower {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+#follower #circle1 {
+  position: absolute;
+  background:@mc;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  margin-top: 0em;
+	margin-left: 0em;
+	z-index: 2;
+	.trans4;
+}
+#follower #circle2 {
+	position: absolute;
+	background: #fff;
+	border-radius: 50%;
+	height: 30px;
+	width: 30px;
+	margin-top: -7px;
+	margin-left: -7px;
+	border: 2px solid @mc;
+	.trans4;
+}
+
+
+
+
 *{
 	min-height: 0;
 	min-width: 0;
@@ -28,7 +62,11 @@ body{
 	.trans4;
 	.thefont;
 	overflow-x: hidden;
+	
 }
+// html{
+// 	cursor: none;	
+// }
 .grey{
 	color:#848484;
 }
@@ -507,6 +545,12 @@ header{
 .center__a{
 	.flex;
 	align-items: center;
+	span{
+		.trans4;
+		&:hover{
+			color:@mc;
+		}
+	}
 }
 .half{
 	.flex;
