--- a/css/styles.less
+++ b/css/styles.less
@@ -31,7 +31,7 @@
   width: 20px;
   margin-top: 0em;
 	margin-left: 0em;
-	z-index: 2;
+	z-index: 101;
 	.trans4;
 }
 #follower #circle2 {
@@ -44,6 +44,7 @@
 	margin-left: -7px;
 	border: 2px solid @mc;
 	.trans4;
+	z-index:100;
 }
 
 
@@ -96,6 +97,9 @@ img:focus{outline: none !important;}
 }
 .fs{
 	font-size: 18px;
+}
+.fss{
+	font-size: 15px;
 }
 .f3{
 	font-size: 3rem;
@@ -198,6 +202,9 @@ button{
 	.thefont;
 	font-size: 1.8rem;
 	padding:0;
+	&:focus{
+		outline: none;
+	}
 }
 input{
 	.thefont;
@@ -386,6 +393,10 @@ header{
 		z-index:2;
 	}
 }
+.search{
+	.allcenter;
+	min-height: calc(100vh - @m2 * 2);
+}
 .header__menu{
 	.column;
 	margin-left:@m3;
@@ -441,9 +452,7 @@ header{
 		fill:#79cbd6 !important;
 	}
 }
-.size__choosing__hidden__block{
 
-}
 
 .size__choosing__label{
 	display: flex;
@@ -641,7 +650,8 @@ header{
 .basket__btn__div{
 	.rel;
 	.allcenter;
-	margin-top:@m3;
+	width: fit-content;
+	margin:@m3 auto 0;
 	button{
 		z-index: 2;
 		.uppercase;
@@ -1042,6 +1052,43 @@ header{
 		float:right;
 	}
 }
+.sliding__search{
+	display: none;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+	position: absolute;
+	top:-100vh;
+	left:0;
+	background:@mc;
+	z-index:6;
+	transition:1s;
+	.basket__delete__btn{
+		width: @m2;
+		float:right;
+	}
+	button{
+		.uppercase;
+		margin-left:@m;
+		margin-top:3px;
+		.f3;
+	}
+	form{
+		align-items: baseline;
+	}
+	input{
+		outline: none;
+    border: none;
+		background: none;
+		.f2;
+	}
+	.cls-1{
+		fill:@bl !important;
+	}
+	.green__line{
+		width: 50vw;
+	}
+}
 .sliding__menu__wrapper{
 	margin:@m2;
 }
@@ -1050,6 +1097,12 @@ header{
 }
 .sliding__menu__animation__hide{
 	animation: sliding__menu__animation__hide .3s forwards ease-out;
+}
+.search__menu__animation{
+	animation: search__menu__animation .5s forwards ease-in;
+}
+.search__menu__animation__hide{
+	animation: search__menu__animation__hide .3s forwards ease-out;
 }
 @keyframes sliding__menu__animation{
 	60%{
@@ -1068,6 +1121,24 @@ header{
 		left:100vw;
 	}
 }
+@keyframes search__menu__animation{
+	60%{
+		top:-90vh;
+	}
+	100%{
+		top:0;
+	}
+}
+
+@keyframes searh__menu__animation__hide{
+	from{
+		top:0;
+	}
+	to{
+		top:-100vh;
+	}
+}
+
 @keyframes birdGoes{
 	0%{
 		transform: translateX(-2vw);
@@ -1108,10 +1179,21 @@ header{
 }
 .wing{
 	animation:wing 4s linear infinite;
-	transform-origin: right;
-	
+	transform-origin: right;	
+}
+#to__basket{
+	color:@bl;
+	z-index:5;
 }
 // svg styles
+.catalog__img{
+	.cls-1{fill:#fff;}
+	.cls-2{fill:#485a83;}
+	.cls-3{fill:#5f6f93;}
+	.cls-4,.cls-5,.cls-6{fill:none;stroke:#000;stroke-miterlimit:10;}
+	.cls-5{stroke-dasharray:20.58 20.58;}
+	.cls-6{stroke-dasharray:20;}
+}
 .footer__link__duck{
 	cls-1{fill:#66c3d0;}
 	.cls-2{fill:#fff;}
@@ -1189,7 +1271,15 @@ header{
 	.cls-2{fill:#5f6f93;}
 }
 @mi:250px;
-
+.catalog__left__part{
+	.catalog__img{
+		width: 60%;
+		margin-left:20%;
+		path{
+			.trans4;
+		}
+	}
+}
 .info__header{
 	margin-left:@mi;
 	margin-right:@mi;
@@ -1412,6 +1502,32 @@ footer{
 		}
 	}
 }
+.green__line{
+	overflow: visible;
+}
+.show__about{
+	animation:showabout 3s forwards;
+}
+@keyframes showabout{
+	to{
+		opacity: 1;
+	}
+}
+.error__sign{
+	.fss;
+	color:@red;
+}
+.popular__slider{
+	.catalog__item__name{
+		.fss;
+	}
+	.catalog__item__price{
+		.fs;
+	}
+	.heart{
+		width: 20px;
+	}
+}
 .slider__wrapper{
 	.rel;
 	.prev__item__card , .next__item__card{
@@ -1456,6 +1572,7 @@ footer{
     background-size: 70%;
 }
 .about__us{
+	opacity: 0;
 	text-align: center;
 	h3{
 		.f3;
@@ -1691,5 +1808,116 @@ footer{
 	.allcenter;
 	svg{
 		position: absolute;
+	}
+}
+
+.learn__about__wrapper{
+	.flex;
+	align-items: center;
+	svg{
+		width: 10px !important;
+	}
+	p{
+		border-bottom:1px dotted @bl;
+		&:hover{
+			cursor: pointer;
+		}
+	}
+}
+#learn__more__sign{
+	margin-right: 5px;
+	.fs;
+}
+.learn__about__block{
+	margin-right: @m2;
+	.flex;
+	img{
+		flex:1;
+		margin-right: @m;
+	}
+		p{
+			flex:2;
+			.fs;
+		}
+}
+.learn__about{
+	.basket__delete__btn{
+		width: 20px;
+		float:right;
+	}
+	.trans4;
+	position: fixed;
+	left:-1000px;
+	background-color:@w;
+	padding:@m2;
+	width: 40vw;
+	min-height: 40vh;
+	z-index: 4;
+	-webkit-box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
+	-moz-box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
+	box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
+	top:40%;
+	h2{
+		margin:0 0 10px 0;
+		 .uppercase;
+	}
+}
+#learn__less__sign{
+	margin-right: 5px;
+}
+.learn__less svg{
+	transform: rotateZ(180deg);
+}
+.learn__less{
+	margin-top:@m1;
+}
+
+.interesting__slider ,.earlier__slider{
+	.c1{
+		margin:0 10px;
+		.catalog__item__name{
+			.fss;
+		}
+		.catalog__item__price{
+			.fs;
+		}
+		.catalog__item__price__and__like svg{
+			width: 20px;
+		}
+	}
+}
+.interesting__slider__full{
+	.rel;
+}
+.interesting__arrow__left, .interesting__arrow__right, .earlier__arrow__left, .earlier__arrow__right{
+	position: absolute;
+	top:25%;
+	.arrow{
+		width: 60px;
+	}
+}
+.interesting__arrow__left, .earlier__arrow__left{
+	left:-60px;
+	transform:rotateZ(180deg)
+}
+.interesting__arrow__right, .earlier__arrow__right{
+	right:-60px;
+}
+.interesting{
+	.uppercase;
+	.f15;
+	margin-left:10px;
+}
+.interesting__sign{
+	.between;
+	align-items: baseline;
+	margin-top:@m4;
+	.giraffe{
+		width: 50px;
+		margin-right:10px;
+	}
+	.circus__elephant{
+		width: 80px;
+		transform:rotateY(180deg);
 	}
 }
