--- a/css/styles.less
+++ b/css/styles.less
@@ -274,7 +274,7 @@ a{
 	padding:@m @m2 0 0;
 }
 .catalog__item__name{
-	.f;
+	.fs;
 	margin:15px 0;
 }
 
@@ -314,7 +314,9 @@ a{
 	}
 }
 .item__wrapper{
-	.pad;
+	padding:20px 0;
+	width: 80%;
+	margin: 0 auto;
 	.rel;
 }
 .item__name{
@@ -907,11 +909,26 @@ header{
 	background-color:@w;
 	min-height: 70vh;
 	padding:@m2;
-	width: 40vw;
-	z-index: 4;
+	width: 50vw;
+	z-index: 6;
 	-webkit-box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
 	-moz-box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
 	box-shadow: 4px 6px 8px 0px rgba(34, 60, 80, 0.2);
+	p{
+		.fss;
+	}
+	.info__text{
+		.w100;
+	}
+	.info__wrapper{
+		grid-template-columns: 1fr;
+	}
+	.info__menu{
+		flex-direction: row;
+	}
+	.nav-link{
+		.fs;
+	}
 }
 .showPopUp{
 	animation:showPopUp .7s forwards ease-in;
@@ -930,9 +947,7 @@ header{
 		left:0;
 	}
 }
-.hidePopup{
-	animation:hidePopup .7s forwards ease-in;
-}
+
 .showBasic{
 	animation: showBasic .5s forwards ease-in;
 }
@@ -943,6 +958,20 @@ header{
 	to{
 		opacity: 1;
 	}
+}
+.hideBasic{
+	animation: hideBasic .5s forwards ease-in;
+}
+@keyframes hideBasic{
+	from{
+		opacity: 1;
+	}
+	to{
+		opacity: 0;
+	}
+}
+.hidePopup{
+	animation:hidePopup .5s forwards ease-in;
 }
 @keyframes hidePopup{
 	0%{
@@ -1143,7 +1172,7 @@ header{
 	animation: search__menu__animation .5s forwards ease-in;
 }
 .search__menu__animation__hide{
-	animation: search__menu__animation__hide .3s forwards ease-out;
+	animation: search__menu__animation__hide .5s forwards ease-out;
 }
 @keyframes sliding__menu__animation{
 	60%{
@@ -1171,7 +1200,7 @@ header{
 	}
 }
 
-@keyframes searh__menu__animation__hide{
+@keyframes search__menu__animation__hide{
 	from{
 		top:0;
 	}
@@ -2068,6 +2097,26 @@ footer{
 .reg__form input {
   margin-bottom: 0;
 }
+.reg__windows{
+	.flex;
+	.giraffe{
+		width: 50%;
+		transform: rotateY(180deg);
+	}
+	.circus__elephant{
+		width: 70%;
+		transform: rotateY(180deg);
+	}
+	.toy{
+		flex:1;
+		.flex;
+		align-items: flex-end;
+		opacity: 0;
+	}
+}
+.toy__go__right{
+	justify-content: flex-end;
+}
 .reg__window {
   width: 15%;
   min-width: 215px;
@@ -2101,4 +2150,9 @@ footer{
 }
 .form__type{
 	.uppercase;
+}
+@media screen and(max-width:950px){
+	.item__wrapper{
+		width: 96%;
+	}
 }
